--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "database-tools",
-  "version": "1.0.0",
+  "name": "easy-sql-builder",
+  "version": "1.0.3",
   "description": "make SQL command easily",
-  "main": "databaseManager.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lovetwice1012/database-tools.git"
+    "url": "git+https://github.com/lovetwice1012/easy-sql-builder.git"
   },
   "keywords": [
     "mysql"
@@ -16,10 +16,13 @@
   "author": "yussy",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lovetwice1012/database-tools/issues"
+    "url": "https://github.com/lovetwice1012/easy-sql-builder/issues"
   },
-  "homepage": "https://github.com/lovetwice1012/database-tools#readme",
+  "homepage": "https://github.com/lovetwice1012/easy-sql-builder#readme",
   "dependencies": {
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "easy-sql-builder": "^1.0.3"
   }
 }
