--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-sql-builder",
-  "version": "1.0.3-0",
+  "version": "1.0.4",
   "description": "make SQL command easily",
   "main": "index.js",
   "scripts": {
